--- a/client/src/App.css
+++ b/client/src/App.css
@@ -448,7 +448,7 @@ body.active-modal {
 
 .create-container {
     height: 550px;
-    max-width: 600px;
+    max-width: 700px;
     background: var(--primary-color);
     border-radius: 5px;
     display: flex;
@@ -532,8 +532,10 @@ body.active-modal {
 
 
 .caption_holder{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1rem;
     resize:none;
-    width: 200px;
+    width: 100%;
     height: 50%;
     border: none;
     background: none;
@@ -663,7 +665,6 @@ body.active-modal {
 .bottom-image img {
     height: 100%;
     width: 100%;
-    max-width: 400px;
     object-fit: cover;
     border-bottom-left-radius:5px ; 
 }
@@ -839,6 +840,8 @@ body.active-modal {
     --dropdown-menu-Y: 1.5rem;
     position: absolute;
     right: 0;
+    left: 0;
+    margin: auto;
     list-style: none;
     background:#ffffff;
     width: 7rem;
@@ -864,13 +867,13 @@ body.active-modal {
     transform: translateY(var(--dropdown-menu-Y));
     opacity: 1;
     transition: var(--speed) ease;
-    z-index: 0;
+    z-index: 1;
 }
 
 .edit_list.inactive {
     transform: translateY(calc(var(--dropdown-menu-Y) - var(--dropdown-menu-Y)));
     opacity: 0;
-    z-index: 0;
+    z-index: -1;
     transition: var(--speed) ease;
 }
 
